--- a/styles.css
+++ b/styles.css
@@ -219,6 +219,13 @@
   background: var(--background-modifier-border);
 }
 
+.vtasks-tag-completed {
+  padding: 2px 4px;
+  border-radius: 4px;
+  background: var(--color-green);
+  color: var(--background-primary);
+}
+
 .vtasks-node.done {
   outline: 2px solid var(--color-green);
 }
