--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
   height: 100%;
   background-image: radial-gradient(var(--background-modifier-border) 1px, transparent 0);
   background-size: 20px 20px;
-  transform: translate(0, 0);
+  transform: translate(0, 0) scale(1);
 }
 
 .vtasks-align-line {
