--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,14 @@
-.vtasks-board {
+.vtasks-board-wrapper {
   position: relative;
   width: 100%;
   height: 100%;
+  overflow: hidden;
+}
+
+.vtasks-board {
+  position: absolute;
+  top: 0;
+  left: 0;
   background-image: radial-gradient(var(--background-modifier-border) 1px, transparent 0);
   background-size: 20px 20px;
   transform: translate(0, 0) scale(1);
