--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
   position: relative;
   width: 100%;
   height: 100%;
-  overflow: auto;
+  display: block;
 }
 
 .vtasks-board {
@@ -13,6 +13,7 @@
   background-image: radial-gradient(var(--background-modifier-border) 1px, transparent 0);
   background-size: 20px 20px;
   transform: translate(0, 0) scale(1);
+  transform-origin: 0 0; /* oppure usa 'center center' per zoomare dal centro */
 }
 
 .vtasks-align-line {
