--- a/styles.css
+++ b/styles.css
@@ -144,6 +144,16 @@
   margin-left: 4px;
 }
 
+.vtasks-note-content {
+  width: 100%;
+  height: 100%;
+  flex: 1;
+  resize: none;
+  background: transparent;
+  border: none;
+  outline: none;
+}
+
 .vtasks-lane {
   position: absolute;
   background: #e6e6e63d;
